# pfMCP

./: .dockerignore  .env.example  .envprod.yaml  .envstage.yaml  .gitignore  CONTRIBUTING.MD  Dockerfile  INTEGRATION_GUIDE.md  PLAN_XERO_INTEGRATION.md  README.MD  package.json  pyproject.toml  requirements.in  requirements.txt  start_sse_dev_server.sh
.github/workflows/: format-check.yml  production.yml  stage.yml
src/: index.ts
src/auth/: constants.py  factory.py
src/auth/clients/: NangoAuthClient.py  NangoAuthClient_test.py
src/servers/: main.py  remote.py
src/servers/ahrefs/: README.md
src/servers/airtable/: README.md  main.py
src/servers/apify/: README.md
src/servers/apollo/: README.md  main.py
src/servers/attio/: README.md  main.py
src/servers/bluesky/: README.md
src/servers/browserbase/: README.md  main.py
src/servers/cal/: README.md
src/servers/calendly/: README.md
src/servers/canva/: README.md
src/servers/clickup/: README.md
src/servers/discourse/: README.md
src/servers/docusign/: README.md
src/servers/dropbox/: README.md  main.py
src/servers/excel/: README.md
src/servers/figma/: README.md
src/servers/firecrawl/: README.md
src/servers/firestore/: README.md  config.yaml  main.py
src/servers/ga4/: README.md  config.yaml  main.py
src/servers/gcalendar/: README.md  main.py
src/servers/gdocs/: README.md  main.py
src/servers/gdrive/: README.md  main.py
src/servers/github/: README.md  config.yaml  main.py
src/servers/gmail/: README.md  config.yaml  main.py
src/servers/gmaps/: README.md
src/servers/gmeet/: README.md
src/servers/gsc/: README.md  config.yaml  main.py
src/servers/gsheets/: README.md  main.py
src/servers/hackernews/: README.md
src/servers/hubspot/: README.md  main.py
src/servers/hunter_io/: README.md
src/servers/instacart/: README.md  main.py
src/servers/intercom/: README.md
src/servers/jira/: README.md
src/servers/klaviyo/: README.md
src/servers/lemlist/: README.md
src/servers/linear/: README.md
src/servers/loops/: README.md
src/servers/mailchimp/: README.md
src/servers/mailerlite/: README.md
src/servers/monday/: README.md
src/servers/netsuite/: README.md  config.yaml  env.example  main.py
src/servers/notion/: README.md  config.yaml  main.py
src/servers/onedrive/: README.md  main.py
src/servers/outlook/: README.md  config.yaml  constants.py  main.py
src/servers/pagerduty/: README.md
src/servers/patreon/: README.md  main.py
src/servers/paypal/: README.md
src/servers/peakflo/: README.md  __init__.py  config.yaml  credential_broker.py  main.py
src/servers/perplexity/: README.md  main.py
src/servers/posthog/: README.md
src/servers/quickbooks/: README.md
src/servers/reddit/: README.md
src/servers/reducto/: README.md
src/servers/salesforce/: README.md  main.py
src/servers/sendgrid/: README.md
src/servers/serpapi/: README.md  main.py
src/servers/sharepoint/: README.md  main.py
src/servers/shopify/: README.md
src/servers/slack/: README.md  main.py
src/servers/slack-user/: README.md  config.yaml  main.py
src/servers/snowflake/: README.md  main.py
src/servers/stripe/: README.md
src/servers/teams/: README.md  main.py
src/servers/tldv/: README.md  config.yaml  main.py
src/servers/twilio/: README.md
src/servers/typeform/: README.md
src/servers/webflow/: README.md
src/utils/: url_utils.py
tests/: README.md
tests/utils/: test_url_utils.py
(+66 files in other folders)
