[project]
name = "pfmcp"
version = "0.1.0"
description = ""
authors = [
    {name = "Uzair Ahmed Wayne",email = "uzairahmedwyne@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<=3.12"
dependencies = [
    "beautifulsoup4 (==4.13.3)",
    "browserbase (==1.2.0)",
    "cachetools (==5.5.2)",
    "certifi (==2025.1.31)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.1)",
    "click (==8.1.8)",
    "cryptography (==44.0.2)",
    "deprecated (==1.2.18)",
    "distro (==1.9.0)",
    "dnspython (==2.7.0)",
    "dropbox (==12.0.2)",
    "enum-compat (==0.0.3)",
    "filelock (==3.18.0)",
    "frozenlist (==1.5.0)",
    "google (==3.0.0)",
    "google-api-core (==2.24.2)",
    "google-api-python-client (==2.166.0)",
    "google-auth (==2.38.0)",
    "google-auth-httplib2 (==0.2.0)",
    "google-auth-oauthlib (==1.2.1)",
    "googleapis-common-protos (==1.69.2)",
    "googlemaps (==4.10.0)",
    "greenlet (==3.1.1)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httplib2 (==0.22.0)",
    "httpx (==0.28.1)",
    "propcache (==0.3.1)",
    "proto-plus (==1.26.1)",
    "protobuf (==6.30.2)",
    "pyasn1 (==0.6.1)",
    "pyasn1-modules (==0.4.2)",
    "pycparser (==2.22)",
    "pydantic (==2.11.3)",
    "pydantic-core (==2.33.1)",
    "pydantic-settings (==2.8.1)",
    "pyee (==12.1.1)",
    "pygithub (==2.6.1)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "pynacl (==1.5.0)",
    "pyopenssl (==25.0.0)",
    "pyparsing (==3.2.3)",
    "python-dateutil (==2.9.0.post0)",
    "python-docx (==1.1.2)",
    "python-dotenv (==1.1.0)",
    "six (==1.17.0)",
    "slack-sdk (==3.35.0)",
    "sniffio (==1.3.1)",
    "snowflake-connector-python (==3.14.0)",
    "sortedcontainers (==2.4.0)",
    "soupsieve (==2.6)",
    "sse-starlette (==2.2.1)",
    "starlette (==0.46.1)",
    "stone (==3.3.1)",
    "stripe (==12.0.0)",
    "tomlkit (==0.13.2)",
    "twilio (==9.5.2)",
    "typing-extensions (==4.13.0)",
    "typing-inspection (==0.4.0)",
    "uritemplate (==4.1.1)",
    "urllib3 (==2.3.0)",
    "uvicorn (==0.34.0)",
    "websockets (==13.1)",
    "wrapt (==1.17.2)",
    "yarl (==1.18.3)",
    "zeep (==4.3.1)",
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.11.14)",
    "aiohttp-retry (==2.9.1)",
    "aiosignal (==1.3.2)",
    "annotated-types (==0.7.0)",
    "anthropic (==0.49.0)",
    "anyio (==4.9.0)",
    "asn1crypto (==1.5.1)",
    "atproto (==0.0.61)",
    "attrs (==25.3.0)",
    "httpx-sse (==0.4.0)",
    "idna (==3.10)",
    "intuit-oauth (==1.2.6)",
    "isodate (==0.7.2)",
    "jiter (==0.9.0)",
    "libipld (==3.0.1)",
    "lxml (==5.3.2)",
    "mailchimp-marketing (==3.0.80)",
    "mailerlite (==0.1.10)",
    "mcp (==1.4.1)",
    "more-itertools (==10.6.0)",
    "multidict (==6.2.0)",
    "notion-client (==2.3.0)",
    "oauthlib (==3.2.2)",
    "packaging (==24.2)",
    "platformdirs (==4.3.7)",
    "playwright (==1.51.0)",
    "ply (==3.11)",
    "prometheus-client (==0.21.1)",
    "python-quickbooks (==0.9.11)",
    "pytz (==2025.2)",
    "requests (==2.32.3)",
    "requests-file (==2.1.0)",
    "requests-oauthlib (==2.0.0)",
    "requests-toolbelt (==1.0.0)",
    "rsa (==4.9)",
    "simple-salesforce (==1.12.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

